fdo#78663 : Corrupt: 2007 WordArt whithin a Drawing tool

A file contains a 2007 word art within a drawing tool.
    In Original file, the xml structure is as below:
    sample xml:
    <p> <r> <ac> <drawing> <txbx> <txbxContent> .. <pict> </pict> </txbxContent></txbx> </drawing> </ac> </r> </p>
    LO was preserving this as :
    <p> <r> <ac> <drawing> <txbx> <txbxContent> .. <drawing> <txbx> <txbxContent> ..
    </txbxContent></txbx> </drawing> .. </txbxContent></txbx> </drawing> </ac> </r> </p>
    Now after this fix, If there is a custom shape within a text box, then we should postpone it and write it in
    a separate run.
    This approach is followed on the fact that LO writes nested TextBoxes in separate run.

    NOTE1 :Due to this fix, xpath related to the below UT needs to be updated.
    testFdo76249 in ooxmlsdrexport.cxx

    NOTE2: In docxsdrexport.cxx : 'm_bIsInDMLTextFrame' is no more required.
    For adding LockedCanvas, we only need to check if the property exists in the property set.
    Therefoew removing the above bool variable.

Reviewed on:
	https://gerrit.libreoffice.org/9392

Change-Id: I00e94712e912ad1977fcb65a945fefb927795d77